<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/on_off"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ToggleButton
            android:id="@+id/tg_on_off"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/on_off_selector"
            android:textOff=""
            android:textOn="" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_settings_clicked"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_settings_bg">

        <ImageView
            android:id="@+id/iv_settings"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/iv_settings"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/layout_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:visibility="visible"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_select_alert_zone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/alert_zone"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tv_select_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:text="@string/five"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:text="@string/alert_tone"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tv_select_alert_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:text="Low"
                />
            <TextView
                android:id="@+id/tv_alerttonetype"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:text="@string/alert_tone_existing_list"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_select_tone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:text="Default"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:text="@string/buzzer_on_tracker_volume"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tv_select_buzzer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:text="Low"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tracker_name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:hint="Bicycle"
                    android:textCursorDrawable="@drawable/edittext_cursor_drawable"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:text="@string/pic"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <ImageView
                android:id="@+id/iv_pic"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/header"
                android:layout_gravity="center_horizontal"
                />
            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="60dp"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="40dp"
                android:text="@string/submit"
                />
        </LinearLayout>

    </ScrollView>
</LinearLayout>