<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:weightSum="1"
        >
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/replace_name"
         android:textColor="@color/black"
         android:layout_alignParentLeft="true"
         android:textSize="16sp"
         android:layout_weight="0.5"
         />
     <EditText
         android:id="@+id/et_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
         android:background="@android:color/transparent"
         android:hint="tracker name"
         android:textCursorDrawable="@drawable/edittext_cursor_drawable"
         android:gravity="right"
         android:textColor="@color/black"
         android:textColorHint="@color/grey"
         android:textSize="16sp"
         />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/layout_top"
        >
        <ImageView
            android:id="@+id/iv_trackerimage"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:src="@drawable/header"
            />
        <Button
            android:id="@+id/btn_replace_pic"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/replace_pic"
            android:textColor="@color/grey"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/done"
        android:textColor="@color/white"
        />
</RelativeLayout>